k8s_use/discovery/kubemanager/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubemanager-svc
  namespace: kubemanager-system
spec:
  selector:
    app: kubemanager
  ports:
    - name: http
      port: 80
      targetPort: 80
