k8s_use/discovery/kubemanager/ingressroute_kubeimooc_auth.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: web-ingressroute-auth
  namespace: kubemanager-system
spec:
  entryPoints:
    - https
  routes:
    - match: Host(`web.kubemanager.com`) && PathPrefix(`/`)
      kind: Rule
      middlewares:
        - name: auth-middleware
      services:
        - name: kubemanager-svc
          port: 80
  tls:
    secretName: kubemanager-cert
---
# Declaring the user list
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: auth-middleware
  namespace: kubemanager-system
spec:
  basicAuth:
    secret: authsecret

---
